--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "anni-k",
   "source": "src/index.html",
   "browserslist": "> 0.5%, last 2 versions, not dead",
+  "targets": {
+    "default": {
+      "distDir": "./"
+    }
+  },
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
